--- a/index.html
+++ b/index.html
@@ -82,13 +82,20 @@
         </article>
     </section>
     <footer class="footer">
-            <p class="aboutme">My name is Marc Murray. I'm a 23 year old web development graduate looking to move into the world of industry work. I love immersive, interactive interfaces and responsive web applications. My skills, aside from the obvious, include PHP, Ruby on Rails, and Javascript. When I'm not developing I love homebrewing, gardening and DIY.</p>
-    <ul>
-        <li><h4>Contact</h4></li>
-        <li><a href="">Linkedin</a></li>
-        <li><a href="">Github</a></li>
-        <li><a href="">Email</a></li>
-    </ul>
+        <div class="foot-2">
+        <h4>About Me</h4>
+        <p class="aboutme">
+            My name is Marc Murray. I'm a 23 year old web development graduate looking to move into the world of industry work. I love immersive, interactive interfaces and responsive web applications. My skills, aside from the obvious, include PHP, Ruby on Rails, and Javascript. When I'm not developing I love homebrewing, gardening and DIY.</p>
+        </div>
+        <div class="foot-1">
+        <ul>
+            <li>
+            <h4>Contact</h4></li>
+            <li><a href="">Linkedin</a></li>
+            <li><a href="">Github</a></li>
+            <li><a href="">Email</a></li>
+        </ul>
+        </div>
     </footer>
 </body>
 
